--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-# Core dependencies for Cat Guardian Robot - Phase 1
 numpy==1.24.2
 opencv-python>=4.6.0
 ultralytics>=8.3.0
 onnxruntime>=1.14.0
 onnx>=1.13.0
+filterpy>=1.4.5
+scipy>=1.10.0
 
 # Note: picamera2 is system-installed, not in requirements
 # Install with: sudo apt install python3-picamera2
